antlr/simplifiedcql_parser.go
// Code generated from antlr/SimplifiedCql.g4 by ANTLR 4.8. DO NOT EDIT.

package parser // SimplifiedCql

import (
	"fmt"
	"reflect"
	"strconv"

	"github.com/antlr/antlr4/runtime/Go/antlr"
)

// Suppress unused import errors
var _ = fmt.Printf
var _ = reflect.Copy
var _ = strconv.Itoa

var deserializer = antlr.NewATNDeserializer(nil)
var deserializedATN = deserializer.DeserializeFromUInt16(parserATN)

var literalNames = []string{
	"", "','", "'*'", "'('", "')'", "'-'", "'['", "']'", "'{'", "'}'", "':'",
	"'<'", "'>'", "'.'", "", "", "", "", "", "", "", "", "", "", "", "", "",
	"", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "",
	"", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "';'",
}
var symbolicNames = []string{
	"", "", "", "", "", "", "", "", "", "", "", "", "", "", "K_AS", "K_ASCII",
	"K_BIGINT", "K_BLOB", "K_BOOLEAN", "K_CAST", "K_COUNTER", "K_DATE", "K_DECIMAL",
	"K_DISTINCT", "K_DOUBLE", "K_DURATION", "K_FLOAT", "K_FROM", "K_FROZEN",
	"K_INET", "K_INFINITY", "K_INT", "K_JSON", "K_LIST", "K_MAP", "K_NAN",
	"K_NULL", "K_SELECT", "K_SET", "K_SMALLINT", "K_TEXT", "K_TIME", "K_TIMESTAMP",
	"K_TIMEUUID", "K_TINYINT", "K_TUPLE", "K_UUID", "K_VARCHAR", "K_VARINT",
	"STRING_LITERAL", "QUOTED_IDENTIFIER", "INTEGER", "FLOAT", "BOOLEAN", "DURATION",
	"UNQUOTED_IDENTIFIER", "HEXNUMBER", "UUID", "WS", "COMMENT", "MULTILINE_COMMENT",
	"EOS", "OTHER",
}

var ruleNames = []string{
	"cqlStatement", "selectStatement", "otherStatement", "selectClause", "selector",
	"unaliasedSelector", "term", "literal", "primitiveLiteral", "collectionLiteral",
	"listLiteral", "setLiteral", "mapLiteral", "cqlType", "primitiveType",
	"collectionType", "tupleType", "functionCall", "functionArgs", "tableName",
	"functionName", "userTypeName", "keyspaceName", "qualifiedIdentifier",
	"identifier", "discardedContent", "unknown",
}
var decisionToDFA = make([]*antlr.DFA, len(deserializedATN.DecisionToState))

func init() {
	for index, ds := range deserializedATN.DecisionToState {
		decisionToDFA[index] = antlr.NewDFA(ds, index)
	}
}

type SimplifiedCqlParser struct {
	*antlr.BaseParser
}

func NewSimplifiedCqlParser(input antlr.TokenStream) *SimplifiedCqlParser {
	this := new(SimplifiedCqlParser)

	this.BaseParser = antlr.NewBaseParser(input)

	this.Interpreter = antlr.NewParserATNSimulator(this, deserializedATN, decisionToDFA, antlr.NewPredictionContextCache())
	this.RuleNames = ruleNames
	this.LiteralNames = literalNames
	this.SymbolicNames = symbolicNames
	this.GrammarFileName = "SimplifiedCql.g4"

	return this
}

// SimplifiedCqlParser tokens.
const (
	SimplifiedCqlParserEOF                 = antlr.TokenEOF
	SimplifiedCqlParserT__0                = 1
	SimplifiedCqlParserT__1                = 2
	SimplifiedCqlParserT__2                = 3
	SimplifiedCqlParserT__3                = 4
	SimplifiedCqlParserT__4                = 5
	SimplifiedCqlParserT__5                = 6
	SimplifiedCqlParserT__6                = 7
	SimplifiedCqlParserT__7                = 8
	SimplifiedCqlParserT__8                = 9
	SimplifiedCqlParserT__9                = 10
	SimplifiedCqlParserT__10               = 11
	SimplifiedCqlParserT__11               = 12
	SimplifiedCqlParserT__12               = 13
	SimplifiedCqlParserK_AS                = 14
	SimplifiedCqlParserK_ASCII             = 15
	SimplifiedCqlParserK_BIGINT            = 16
	SimplifiedCqlParserK_BLOB              = 17
	SimplifiedCqlParserK_BOOLEAN           = 18
	SimplifiedCqlParserK_CAST              = 19
	SimplifiedCqlParserK_COUNTER           = 20
	SimplifiedCqlParserK_DATE              = 21
	SimplifiedCqlParserK_DECIMAL           = 22
	SimplifiedCqlParserK_DISTINCT          = 23
	SimplifiedCqlParserK_DOUBLE            = 24
	SimplifiedCqlParserK_DURATION          = 25
	SimplifiedCqlParserK_FLOAT             = 26
	SimplifiedCqlParserK_FROM              = 27
	SimplifiedCqlParserK_FROZEN            = 28
	SimplifiedCqlParserK_INET              = 29
	SimplifiedCqlParserK_INFINITY          = 30
	SimplifiedCqlParserK_INT               = 31
	SimplifiedCqlParserK_JSON              = 32
	SimplifiedCqlParserK_LIST              = 33
	SimplifiedCqlParserK_MAP               = 34
	SimplifiedCqlParserK_NAN               = 35
	SimplifiedCqlParserK_NULL              = 36
	SimplifiedCqlParserK_SELECT            = 37
	SimplifiedCqlParserK_SET               = 38
	SimplifiedCqlParserK_SMALLINT          = 39
	SimplifiedCqlParserK_TEXT              = 40
	SimplifiedCqlParserK_TIME              = 41
	SimplifiedCqlParserK_TIMESTAMP         = 42
	SimplifiedCqlParserK_TIMEUUID          = 43
	SimplifiedCqlParserK_TINYINT           = 44
	SimplifiedCqlParserK_TUPLE             = 45
	SimplifiedCqlParserK_UUID              = 46
	SimplifiedCqlParserK_VARCHAR           = 47
	SimplifiedCqlParserK_VARINT            = 48
	SimplifiedCqlParserSTRING_LITERAL      = 49
	SimplifiedCqlParserQUOTED_IDENTIFIER   = 50
	SimplifiedCqlParserINTEGER             = 51
	SimplifiedCqlParserFLOAT               = 52
	SimplifiedCqlParserBOOLEAN             = 53
	SimplifiedCqlParserDURATION            = 54
	SimplifiedCqlParserUNQUOTED_IDENTIFIER = 55
	SimplifiedCqlParserHEXNUMBER           = 56
	SimplifiedCqlParserUUID                = 57
	SimplifiedCqlParserWS                  = 58
	SimplifiedCqlParserCOMMENT             = 59
	SimplifiedCqlParserMULTILINE_COMMENT   = 60
	SimplifiedCqlParserEOS                 = 61
	SimplifiedCqlParserOTHER               = 62
)

// SimplifiedCqlParser rules.
const (
	SimplifiedCqlParserRULE_cqlStatement        = 0
	SimplifiedCqlParserRULE_selectStatement     = 1
	SimplifiedCqlParserRULE_otherStatement      = 2
	SimplifiedCqlParserRULE_selectClause        = 3
	SimplifiedCqlParserRULE_selector            = 4
	SimplifiedCqlParserRULE_unaliasedSelector   = 5
	SimplifiedCqlParserRULE_term                = 6
	SimplifiedCqlParserRULE_literal             = 7
	SimplifiedCqlParserRULE_primitiveLiteral    = 8
	SimplifiedCqlParserRULE_collectionLiteral   = 9
	SimplifiedCqlParserRULE_listLiteral         = 10
	SimplifiedCqlParserRULE_setLiteral          = 11
	SimplifiedCqlParserRULE_mapLiteral          = 12
	SimplifiedCqlParserRULE_cqlType             = 13
	SimplifiedCqlParserRULE_primitiveType       = 14
	SimplifiedCqlParserRULE_collectionType      = 15
	SimplifiedCqlParserRULE_tupleType           = 16
	SimplifiedCqlParserRULE_functionCall        = 17
	SimplifiedCqlParserRULE_functionArgs        = 18
	SimplifiedCqlParserRULE_tableName           = 19
	SimplifiedCqlParserRULE_functionName        = 20
	SimplifiedCqlParserRULE_userTypeName        = 21
	SimplifiedCqlParserRULE_keyspaceName        = 22
	SimplifiedCqlParserRULE_qualifiedIdentifier = 23
	SimplifiedCqlParserRULE_identifier          = 24
	SimplifiedCqlParserRULE_discardedContent    = 25
	SimplifiedCqlParserRULE_unknown             = 26
)

// ICqlStatementContext is an interface to support dynamic dispatch.
type ICqlStatementContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// IsCqlStatementContext differentiates from other interfaces.
	IsCqlStatementContext()
}

type CqlStatementContext struct {
	*antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyCqlStatementContext() *CqlStatementContext {
	var p = new(CqlStatementContext)
	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(nil, -1)
	p.RuleIndex = SimplifiedCqlParserRULE_cqlStatement
	return p
}

func (*CqlStatementContext) IsCqlStatementContext() {}

func NewCqlStatementContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *CqlStatementContext {
	var p = new(CqlStatementContext)

	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(parent, invokingState)

	p.parser = parser
	p.RuleIndex = SimplifiedCqlParserRULE_cqlStatement

	return p
}

func (s *CqlStatementContext) GetParser() antlr.Parser { return s.parser }

func (s *CqlStatementContext) SelectStatement() ISelectStatementContext {
	var t = s.GetTypedRuleContext(reflect.TypeOf((*ISelectStatementContext)(nil)).Elem(), 0)

	if t == nil {
		return nil
	}

	return t.(ISelectStatementContext)
}

func (s *CqlStatementContext) EOS() antlr.TerminalNode {
	return s.GetToken(SimplifiedCqlParserEOS, 0)
}

func (s *CqlStatementContext) OtherStatement() IOtherStatementContext {
	var t = s.GetTypedRuleContext(reflect.TypeOf((*IOtherStatementContext)(nil)).Elem(), 0)

	if t == nil {
		return nil
	}

	return t.(IOtherStatementContext)
}

func (s *CqlStatementContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *CqlStatementContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *CqlStatementContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(SimplifiedCqlListener); ok {
		listenerT.EnterCqlStatement(s)
	}
}

func (s *CqlStatementContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(SimplifiedCqlListener); ok {
		listenerT.ExitCqlStatement(s)
	}
}

func (p *SimplifiedCqlParser) CqlStatement() (localctx ICqlStatementContext) {
	localctx = NewCqlStatementContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 0, SimplifiedCqlParserRULE_cqlStatement)
	var _la int

	defer func() {
		p.ExitRule()
	}()

	defer func() {
		if err := recover(); err != nil {
			if v, ok := err.(antlr.RecognitionException); ok {
				localctx.SetException(v)
				p.GetErrorHandler().ReportError(p, v)
				p.GetErrorHandler().Recover(p, v)
			} else {
				panic(err)
			}
		}
	}()

	p.SetState(62)
	p.GetErrorHandler().Sync(p)
	switch p.GetInterpreter().AdaptivePredict(p.GetTokenStream(), 2, p.GetParserRuleContext()) {
	case 1:
		p.EnterOuterAlt(localctx, 1)
		{
			p.SetState(54)
			p.SelectStatement()
		}
		p.SetState(56)
		p.GetErrorHandler().Sync(p)
		_la = p.GetTokenStream().LA(1)

		if _la == SimplifiedCqlParserEOS {
			{
				p.SetState(55)
				p.Match(SimplifiedCqlParserEOS)
			}

		}

	case 2:
		p.EnterOuterAlt(localctx, 2)
		{
			p.SetState(58)
			p.OtherStatement()
		}
		p.SetState(60)
		p.GetErrorHandler().Sync(p)
		_la = p.GetTokenStream().LA(1)

		if _la == SimplifiedCqlParserEOS {
			{
				p.SetState(59)
				p.Match(SimplifiedCqlParserEOS)
			}

		}

	}

	return localctx
}

// ISelectStatementContext is an interface to support dynamic dispatch.
type ISelectStatementContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// IsSelectStatementContext differentiates from other interfaces.
	IsSelectStatementContext()
}

type SelectStatementContext struct {
	*antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptySelectStatementContext() *SelectStatementContext {
	var p = new(SelectStatementContext)
	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(nil, -1)
	p.RuleIndex = SimplifiedCqlParserRULE_selectStatement
	return p
}

func (*SelectStatementContext) IsSelectStatementContext() {}

func NewSelectStatementContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *SelectStatementContext {
	var p = new(SelectStatementContext)

	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(parent, invokingState)

	p.parser = parser
	p.RuleIndex = SimplifiedCqlParserRULE_selectStatement

	return p
}

func (s *SelectStatementContext) GetParser() antlr.Parser { return s.parser }

func (s *SelectStatementContext) K_SELECT() antlr.TerminalNode {
	return s.GetToken(SimplifiedCqlParserK_SELECT, 0)
}

func (s *SelectStatementContext) SelectClause() ISelectClauseContext {
	var t = s.GetTypedRuleContext(reflect.TypeOf((*ISelectClauseContext)(nil)).Elem(), 0)

	if t == nil {
		return nil
	}

	return t.(ISelectClauseContext)
}

func (s *SelectStatementContext) K_FROM() antlr.TerminalNode {
	return s.GetToken(SimplifiedCqlParserK_FROM, 0)
}

func (s *SelectStatementContext) TableName() ITableNameContext {
	var t = s.GetTypedRuleContext(reflect.TypeOf((*ITableNameContext)(nil)).Elem(), 0)

	if t == nil {
		return nil
	}

	return t.(ITableNameContext)
}

func (s *SelectStatementContext) DiscardedContent() IDiscardedContentContext {
	var t = s.GetTypedRuleContext(reflect.TypeOf((*IDiscardedContentContext)(nil)).Elem(), 0)

	if t == nil {
		return nil
	}

	return t.(IDiscardedContentContext)
}

func (s *SelectStatementContext) K_JSON() antlr.TerminalNode {
	return s.GetToken(SimplifiedCqlParserK_JSON, 0)
}

func (s *SelectStatementContext) K_DISTINCT() antlr.TerminalNode {
	return s.GetToken(SimplifiedCqlParserK_DISTINCT, 0)
}

func (s *SelectStatementContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *SelectStatementContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *SelectStatementContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(SimplifiedCqlListener); ok {
		listenerT.EnterSelectStatement(s)
	}
}

func (s *SelectStatementContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(SimplifiedCqlListener); ok {
		listenerT.ExitSelectStatement(s)
	}
}

func (p *SimplifiedCqlParser) SelectStatement() (localctx ISelectStatementContext) {
	localctx = NewSelectStatementContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 2, SimplifiedCqlParserRULE_selectStatement)
	var _la int

	defer func() {
		p.ExitRule()
	}()

	defer func() {
		if err := recover(); err != nil {
			if v, ok := err.(antlr.RecognitionException); ok {
				localctx.SetException(v)
				p.GetErrorHandler().ReportError(p, v)
				p.GetErrorHandler().Recover(p, v)
			} else {
				panic(err)
			}
		}
	}()

	p.EnterOuterAlt(localctx, 1)
	{
		p.SetState(64)
		p.Match(SimplifiedCqlParserK_SELECT)
	}
	p.SetState(66)
	p.GetErrorHandler().Sync(p)
	_la = p.GetTokenStream().LA(1)

	if _la == SimplifiedCqlParserK_JSON {
		{
			p.SetState(65)
			p.Match(SimplifiedCqlParserK_JSON)
		}

	}
	p.SetState(69)
	p.GetErrorHandler().Sync(p)
	_la = p.GetTokenStream().LA(1)

	if _la == SimplifiedCqlParserK_DISTINCT {
		{
			p.SetState(68)
			p.Match(SimplifiedCqlParserK_DISTINCT)
		}

	}
	{
		p.SetState(71)
		p.SelectClause()
	}
	{
		p.SetState(72)
		p.Match(SimplifiedCqlParserK_FROM)
	}
	{
		p.SetState(73)
		p.TableName()
	}
	{
		p.SetState(74)
		p.DiscardedContent()
	}

	return localctx
}

// IOtherStatementContext is an interface to support dynamic dispatch.
type IOtherStatementContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// IsOtherStatementContext differentiates from other interfaces.
	IsOtherStatementContext()
}

type OtherStatementContext struct {
	*antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyOtherStatementContext() *OtherStatementContext {
	var p = new(OtherStatementContext)
	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(nil, -1)
	p.RuleIndex = SimplifiedCqlParserRULE_otherStatement
	return p
}

func (*OtherStatementContext) IsOtherStatementContext() {}

func NewOtherStatementContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *OtherStatementContext {
	var p = new(OtherStatementContext)

	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(parent, invokingState)

	p.parser = parser
	p.RuleIndex = SimplifiedCqlParserRULE_otherStatement

	return p
}

func (s *OtherStatementContext) GetParser() antlr.Parser { return s.parser }

func (s *OtherStatementContext) DiscardedContent() IDiscardedContentContext {
	var t = s.GetTypedRuleContext(reflect.TypeOf((*IDiscardedContentContext)(nil)).Elem(), 0)

	if t == nil {
		return nil
	}

	return t.(IDiscardedContentContext)
}

func (s *OtherStatementContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *OtherStatementContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *OtherStatementContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(SimplifiedCqlListener); ok {
		listenerT.EnterOtherStatement(s)
	}
}

func (s *OtherStatementContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(SimplifiedCqlListener); ok {
		listenerT.ExitOtherStatement(s)
	}
}

func (p *SimplifiedCqlParser) OtherStatement() (localctx IOtherStatementContext) {
	localctx = NewOtherStatementContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 4, SimplifiedCqlParserRULE_otherStatement)

	defer func() {
		p.ExitRule()
	}()

	defer func() {
		if err := recover(); err != nil {
			if v, ok := err.(antlr.RecognitionException); ok {
				localctx.SetException(v)
				p.GetErrorHandler().ReportError(p, v)
				p.GetErrorHandler().Recover(p, v)
			} else {
				panic(err)
			}
		}
	}()

	p.EnterOuterAlt(localctx, 1)
	{
		p.SetState(76)
		p.DiscardedContent()
	}

	return localctx
}

// ISelectClauseContext is an interface to support dynamic dispatch.
type ISelectClauseContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// IsSelectClauseContext differentiates from other interfaces.
	IsSelectClauseContext()
}

type SelectClauseContext struct {
	*antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptySelectClauseContext() *SelectClauseContext {
	var p = new(SelectClauseContext)
	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(nil, -1)
	p.RuleIndex = SimplifiedCqlParserRULE_selectClause
	return p
}

func (*SelectClauseContext) IsSelectClauseContext() {}

func NewSelectClauseContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *SelectClauseContext {
	var p = new(SelectClauseContext)

	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(parent, invokingState)

	p.parser = parser
	p.RuleIndex = SimplifiedCqlParserRULE_selectClause

	return p
}

func (s *SelectClauseContext) GetParser() antlr.Parser { return s.parser }

func (s *SelectClauseContext) AllSelector() []ISelectorContext {
	var ts = s.GetTypedRuleContexts(reflect.TypeOf((*ISelectorContext)(nil)).Elem())
	var tst = make([]ISelectorContext, len(ts))

	for i, t := range ts {
		if t != nil {
			tst[i] = t.(ISelectorContext)
		}
	}

	return tst
}

func (s *SelectClauseContext) Selector(i int) ISelectorContext {
	var t = s.GetTypedRuleContext(reflect.TypeOf((*ISelectorContext)(nil)).Elem(), i)

	if t == nil {
		return nil
	}

	return t.(ISelectorContext)
}

func (s *SelectClauseContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *SelectClauseContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *SelectClauseContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(SimplifiedCqlListener); ok {
		listenerT.EnterSelectClause(s)
	}
}

func (s *SelectClauseContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(SimplifiedCqlListener); ok {
		listenerT.ExitSelectClause(s)
	}
}

func (p *SimplifiedCqlParser) SelectClause() (localctx ISelectClauseContext) {
	localctx = NewSelectClauseContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 6, SimplifiedCqlParserRULE_selectClause)
	var _la int

	defer func() {
		p.ExitRule()
	}()

	defer func() {
		if err := recover(); err != nil {
			if v, ok := err.(antlr.RecognitionException); ok {
				localctx.SetException(v)
				p.GetErrorHandler().ReportError(p, v)
				p.GetErrorHandler().Recover(p, v)
			} else {
				panic(err)
			}
		}
	}()

	p.SetState(87)
	p.GetErrorHandler().Sync(p)

	switch p.GetTokenStream().LA(1) {
	case SimplifiedCqlParserT__2, SimplifiedCqlParserT__4, SimplifiedCqlParserT__5, SimplifiedCqlParserT__7, SimplifiedCqlParserK_CAST, SimplifiedCqlParserK_INFINITY, SimplifiedCqlParserK_NAN, SimplifiedCqlParserK_NULL, SimplifiedCqlParserSTRING_LITERAL, SimplifiedCqlParserQUOTED_IDENTIFIER, SimplifiedCqlParserINTEGER, SimplifiedCqlParserFLOAT, SimplifiedCqlParserBOOLEAN, SimplifiedCqlParserDURATION, SimplifiedCqlParserUNQUOTED_IDENTIFIER, SimplifiedCqlParserHEXNUMBER, SimplifiedCqlParserUUID:
		p.EnterOuterAlt(localctx, 1)
		{
			p.SetState(78)
			p.Selector()
		}
		p.SetState(83)
		p.GetErrorHandler().Sync(p)
		_la = p.GetTokenStream().LA(1)

		for _la == SimplifiedCqlParserT__0 {
			{
				p.SetState(79)
				p.Match(SimplifiedCqlParserT__0)
			}
			{
				p.SetState(80)
				p.Selector()
			}

			p.SetState(85)
			p.GetErrorHandler().Sync(p)
			_la = p.GetTokenStream().LA(1)
		}

	case SimplifiedCqlParserT__1:
		p.EnterOuterAlt(localctx, 2)
		{
			p.SetState(86)
			p.Match(SimplifiedCqlParserT__1)
		}

	default:
		panic(antlr.NewNoViableAltException(p, nil, nil, nil, nil, nil))
	}

	return localctx
}

// ISelectorContext is an interface to support dynamic dispatch.
type ISelectorContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// IsSelectorContext differentiates from other interfaces.
	IsSelectorContext()
}

type SelectorContext struct {
	*antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptySelectorContext() *SelectorContext {
	var p = new(SelectorContext)
	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(nil, -1)
	p.RuleIndex = SimplifiedCqlParserRULE_selector
	return p
}

func (*SelectorContext) IsSelectorContext() {}

func NewSelectorContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *SelectorContext {
	var p = new(SelectorContext)

	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(parent, invokingState)

	p.parser = parser
	p.RuleIndex = SimplifiedCqlParserRULE_selector

	return p
}

func (s *SelectorContext) GetParser() antlr.Parser { return s.parser }
